version/0.15/_sources/api/ansys/geometry/core/_grpc/_services/v1/conversions/index.rst.txt






The ``conversions.py`` module
=============================

.. py:module:: ansys.geometry.core._grpc._services.v1.conversions


Summary
-------








.. py:currentmodule:: ansys.geometry.core._grpc._services.v1.conversions
.. tab-set::







    .. tab-item:: Functions

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~from_grpc_backend_type_to_backend_type`
            - Convert a gRPC v1 backend type to a backend type.


          * - :py:obj:`~build_grpc_id`
            - Build a v1 EntityIdentifier gRPC message.


          * - :py:obj:`~from_point3d_to_grpc_point`
            - Convert a v1 ``Point3D`` class to a point gRPC message.


          * - :py:obj:`~from_grpc_point_to_point3d`
            - Convert a v1 point gRPC message class to a ``Point3D`` class.


          * - :py:obj:`~from_point2d_to_grpc_point`
            - Convert a v1 ``Point2D`` class to a point gRPC message.


          * - :py:obj:`~from_point3d_to_grpc_design_point`
            - Convert a v1 ``Point3D`` class to a design point gRPC message.


          * - :py:obj:`~from_unit_vector_to_grpc_direction`
            - Convert a v1 ``UnitVector3D`` class to a unit vector gRPC message.


          * - :py:obj:`~from_line_to_grpc_line`
            - Convert a v1 ``Line`` to a line gRPC message.


          * - :py:obj:`~from_grpc_material_to_material`
            - Convert a v1 material gRPC message to a ``Material`` class.


          * - :py:obj:`~from_grpc_material_property_to_material_property`
            - Convert a v1 material property gRPC message to a ``MaterialProperty`` class.


          * - :py:obj:`~from_frame_to_grpc_frame`
            - Convert a v1 ``Frame`` class to a frame gRPC message.


          * - :py:obj:`~from_grpc_frame_to_frame`
            - Convert a v1 frame gRPC message to a ``Frame`` class.


          * - :py:obj:`~from_plane_to_grpc_plane`
            - Convert a v1 ``Plane`` class to a plane gRPC message.


          * - :py:obj:`~from_grpc_plane_to_plane`
            - Convert a v1 plane gRPC message to a ``Plane`` class.


          * - :py:obj:`~from_grpc_tess_to_pd`
            - Convert a v1 ``Tessellation`` to ``pyvista.PolyData``.


          * - :py:obj:`~from_grpc_tess_to_raw_data`
            - Convert a v1 ``Tessellation`` to raw data.


          * - :py:obj:`~from_grpc_edge_tess_to_pd`
            - Convert a v1 ``EdgeTessellation`` to ``pyvista.PolyData``.


          * - :py:obj:`~from_grpc_edge_tess_to_raw_data`
            - Convert a v1 ``EdgeTessellation`` to raw data.


          * - :py:obj:`~from_tess_options_to_grpc_tess_options`
            - Convert a v1 ``TessellationOptions`` class to a tessellation options gRPC message.


          * - :py:obj:`~from_fmd_options_to_grpc_fmd_options`
            - Convert a v1 ``FMDExportOptions`` class to an FMD export options gRPC message.


          * - :py:obj:`~from_sketch_shapes_to_grpc_geometries`
            - Convert lists of ``SketchEdge`` and ``SketchFace`` to a gRPC message.


          * - :py:obj:`~from_sketch_edges_to_grpc_geometries`
            - Convert a v1 list of ``SketchEdge`` to a gRPC message.


          * - :py:obj:`~from_sketch_arc_to_grpc_arc`
            - Convert a v1 ``Arc`` class to an arc gRPC message.


          * - :py:obj:`~from_sketch_nurbs_to_grpc_nurbs_curve`
            - Convert a v1 ``SketchNurbs`` class to a NURBS curve gRPC message.


          * - :py:obj:`~from_sketch_ellipse_to_grpc_ellipse`
            - Convert a v1 ``SketchEllipse`` class to an ellipse gRPC message.


          * - :py:obj:`~from_sketch_circle_to_grpc_circle`
            - Convert a v1 ``SketchCircle`` class to a circle gRPC message.


          * - :py:obj:`~from_sketch_polygon_to_grpc_polygon`
            - Convert a v1 ``Polygon`` class to a polygon gRPC message.


          * - :py:obj:`~from_sketch_segment_to_grpc_line`
            - Convert a v1 ``Segment`` class to a line gRPC message.


          * - :py:obj:`~from_trimmed_curve_to_grpc_trimmed_curve`
            - Convert a v1 ``TrimmedCurve`` to a trimmed curve gRPC message.


          * - :py:obj:`~from_curve_to_grpc_curve`
            - Convert a v1 ``Curve`` object to a curve gRPC message.


          * - :py:obj:`~from_nurbs_curve_to_grpc_nurbs_curve`
            - Convert a v1 ``NURBSCurve`` to a NURBS curve gRPC message.


          * - :py:obj:`~from_nurbs_surface_to_grpc_nurbs_surface`
            - Convert a v1 ``NURBSSurface`` to a NURBS surface gRPC message.


          * - :py:obj:`~from_grpc_nurbs_curve_to_nurbs_curve`
            - Convert a v1 NURBS curve gRPC message to a ``NURBSCurve``.


          * - :py:obj:`~from_grpc_nurbs_surface_to_nurbs_surface`
            - Convert a v1 NURBS surface gRPC message to a ``NURBSSurface``.


          * - :py:obj:`~from_knots_to_grpc_knots`
            - Convert a v1 list of knots to a list of gRPC knot messages.


          * - :py:obj:`~from_grpc_curve_to_curve`
            - Convert a v1 curve gRPC message to a ``Curve``.


          * - :py:obj:`~from_trimmed_surface_to_grpc_trimmed_surface`
            - Convert a v1 ``TrimmedSurface`` to a trimmed surface gRPC message.


          * - :py:obj:`~from_surface_to_grpc_surface`
            - Convert a v1 ``Surface`` object to a surface gRPC message.


          * - :py:obj:`~from_grpc_surface_to_surface`
            - Convert a v1 surface gRPC message to a ``Surface`` class.


          * - :py:obj:`~from_grpc_driving_dimension_to_driving_dimension`
            - Convert a v1 gRPC driving dimension to a driving dimension object.


          * - :py:obj:`~from_driving_dimension_to_grpc_driving_dimension`
            - Convert a v1 driving dimension object to a gRPC driving dimension.


          * - :py:obj:`~from_grpc_update_status_to_parameter_update_status`
            - Convert a v1 gRPC update status to a parameter update status.


          * - :py:obj:`~from_design_file_format_to_grpc_file_export_format`
            - Convert from a DesignFileFormat object to a gRPC FileExportFormat one.


          * - :py:obj:`~from_material_to_grpc_material`
            - Convert a v1 ``Material`` class to a material gRPC message.


          * - :py:obj:`~from_grpc_matrix_to_matrix`
            - Convert a v1 gRPC matrix to a matrix.


          * - :py:obj:`~from_matrix_to_grpc_matrix`
            - Convert a ``Matrix44`` to a v1 gRPC matrix.


          * - :py:obj:`~from_grpc_direction_to_unit_vector`
            - Convert a v1 gRPC direction to a unit vector.


          * - :py:obj:`~from_length_to_grpc_quantity`
            - Convert a v1 ``Distance`` containing a length to a gRPC quantity.


          * - :py:obj:`~from_grpc_quantity_to_distance`
            - Convert a v1 gRPC quantity to ``Distance`` containing a length.


          * - :py:obj:`~from_angle_to_grpc_quantity`
            - Convert a v1 ``Measurement`` containing an angle to a gRPC quantity.


          * - :py:obj:`~from_grpc_angle_to_angle`
            - Convert a v1 gRPC quantity representing an angle to a pint Quantity.


          * - :py:obj:`~from_area_to_grpc_quantity`
            - Convert a v1 ``Measurement`` containing an area to a gRPC quantity.


          * - :py:obj:`~from_volume_to_grpc_quantity`
            - Convert a v1 ``Measurement`` containing a volume to a gRPC quantity.


          * - :py:obj:`~from_grpc_volume_to_volume`
            - Convert a v1 gRPC quantity representing volume to a pint Quantity.


          * - :py:obj:`~from_grpc_quantity_to_float`
            - Convert a v1 gRPC quantity to a float.


          * - :py:obj:`~from_float_to_grpc_quantity`
            - Convert a float to a gRPC quantity.


          * - :py:obj:`~from_parameter_to_grpc_quantity`
            - Convert a v1 dimensionless parameter to a gRPC quantity.


          * - :py:obj:`~from_import_options_definitions_to_grpc_import_options_definition`
            - Convert a v1 ``ImportOptionsDefinitions`` to import options definition gRPC message.


          * - :py:obj:`~from_enclosure_options_to_grpc_enclosure_options`
            - Convert enclosure_options to grpc definition.


          * - :py:obj:`~serialize_body`
            - Serialize a GRPCBodyEntity object into a dictionary.


          * - :py:obj:`~serialize_component`
            - Serialize a GRPCComponentEntity object into a dictionary.


          * - :py:obj:`~serialize_part`
            - Serialize a GRPCPartEntity object into a dictionary.


          * - :py:obj:`~serialize_entity_identifier`
            - Serialize an EntityIdentifier object into a dictionary.


          * - :py:obj:`~serialize_tracked_changes`
            - Serialize a TrackedChanges object into a dictionary.


          * - :py:obj:`~serialize_tracked_command_response`
            - Serialize a TrackedCommandResponse object into a dictionary.


          * - :py:obj:`~serialize_repair_command_response`
            - Serialize a RepairToolResponse object into a dictionary.


          * - :py:obj:`~response_problem_area_for_body`
            - Get a dictionary response from problem areas for a body.


          * - :py:obj:`~response_problem_area_for_face`
            - Get a dictionary response from problem areas for a face.


          * - :py:obj:`~response_problem_area_for_edge`
            - Get a dictionary response from problem areas for an edge.


          * - :py:obj:`~from_face_loop_to_grpc_loop`
            - Convert a ``FaceLoop`` to a gRPC ``Loop`` message.


          * - :py:obj:`~to_grpc_any`
            - Pack an arbitrary Python value into a ``google.protobuf.Any`` message.


          * - :py:obj:`~from_grpc_any`
            - Unpack a ``google.protobuf.Any`` message to a native PyAnsys Geometry type.

















Description
-----------

Module containing v1 related conversions from PyAnsys Geometry objects to gRPC messages.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:function:: from_grpc_backend_type_to_backend_type(grpc_backend_type: ansys.api.discovery.v1.commonenums_pb2.BackendType) -> ansys.geometry.core.connection.backend.BackendType

   
   Convert a gRPC v1 backend type to a backend type.


   :Parameters:

       **backend_type** : :obj:`GRPCBackendType`
           Source backend type.



   :Returns:

       :obj:`BackendType`
           Converted backend type.











   ..
       !! processed by numpydoc !!

.. py:function:: build_grpc_id(id: str) -> ansys.api.discovery.v1.commonmessages_pb2.EntityIdentifier

   
   Build a v1 EntityIdentifier gRPC message.


   :Parameters:

       **id** : :class:`python:str`
           Source ID.



   :Returns:

       :obj:`EntityIdentifier`
           Geometry service gRPC entity identifier message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_point3d_to_grpc_point(point: ansys.geometry.core.math.point.Point3D) -> ansys.api.discovery.v1.commonmessages_pb2.Point

   
   Convert a v1 ``Point3D`` class to a point gRPC message.


   :Parameters:

       **point** : :obj:`Point3D`
           Source point data.



   :Returns:

       :obj:`GRPCPoint`
           Geometry service gRPC point message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_point_to_point3d(point: ansys.api.discovery.v1.commonmessages_pb2.Point) -> ansys.geometry.core.math.point.Point3D

   
   Convert a v1 point gRPC message class to a ``Point3D`` class.


   :Parameters:

       **point** : :obj:`GRPCPoint`
           Source point data.



   :Returns:

       :obj:`Point3D`
           Converted point.











   ..
       !! processed by numpydoc !!

.. py:function:: from_point2d_to_grpc_point(plane: ansys.geometry.core.math.plane.Plane, point2d: ansys.geometry.core.math.point.Point2D) -> ansys.api.discovery.v1.commonmessages_pb2.Point

   
   Convert a v1 ``Point2D`` class to a point gRPC message.


   :Parameters:

       **plane** : :obj:`Plane`
           Plane for positioning the 2D point.

       **point** : :obj:`Point2D`
           Source point data.



   :Returns:

       :obj:`GRPCPoint`
           Geometry service gRPC point message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_point3d_to_grpc_design_point(point: ansys.geometry.core.math.point.Point3D) -> ansys.api.discovery.v1.design.designmessages_pb2.DatumPointEntity

   
   Convert a v1 ``Point3D`` class to a design point gRPC message.


   :Parameters:

       **point** : :obj:`Point3D`
           Source point data.



   :Returns:

       :obj:`GRPCDesignPoint`
           Geometry service gRPC design point message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_unit_vector_to_grpc_direction(unit_vector: ansys.geometry.core.math.vector.UnitVector3D) -> ansys.api.discovery.v1.commonmessages_pb2.Direction

   
   Convert a v1 ``UnitVector3D`` class to a unit vector gRPC message.


   :Parameters:

       **unit_vector** : :obj:`UnitVector3D`
           Source vector data.



   :Returns:

       :obj:`GRPCDirection`
           Geometry service gRPC direction message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_line_to_grpc_line(line: ansys.geometry.core.shapes.curves.line.Line) -> ansys.api.discovery.v1.commonmessages_pb2.Line

   
   Convert a v1 ``Line`` to a line gRPC message.


   :Parameters:

       **line** : :obj:`Line`
           Line to convert.



   :Returns:

       :obj:`GRPCLine`
           Geometry service gRPC ``Line`` message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_material_to_material(material: ansys.api.discovery.v1.design.designmessages_pb2.MaterialEntity) -> ansys.geometry.core.materials.material.Material

   
   Convert a v1 material gRPC message to a ``Material`` class.


   :Parameters:

       **material** : :obj:`GRPCMaterial`
           Material gRPC message.



   :Returns:

       :obj:`Material`
           Converted material.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_material_property_to_material_property(material_property: ansys.api.discovery.v1.design.designmessages_pb2.MaterialProperty) -> ansys.geometry.core.materials.property.MaterialProperty

   
   Convert a v1 material property gRPC message to a ``MaterialProperty`` class.


   :Parameters:

       **material_property** : :obj:`GRPCMaterialProperty`
           Material property gRPC message.



   :Returns:

       :obj:`MaterialProperty`
           Converted material property.











   ..
       !! processed by numpydoc !!

.. py:function:: from_frame_to_grpc_frame(frame: ansys.geometry.core.math.frame.Frame) -> ansys.api.discovery.v1.commonmessages_pb2.Frame

   
   Convert a v1 ``Frame`` class to a frame gRPC message.


   :Parameters:

       **frame** : :obj:`Frame`
           Source frame data.



   :Returns:

       :obj:`GRPCFrame`
           Geometry service gRPC frame message. The unit for the frame origin is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_frame_to_frame(frame: ansys.api.discovery.v1.commonmessages_pb2.Frame) -> ansys.geometry.core.math.frame.Frame

   
   Convert a v1 frame gRPC message to a ``Frame`` class.


   :Parameters:

       **frame** : :obj:`GRPCFrame`
           Source frame data.



   :Returns:

       :obj:`Frame`
           Converted frame.











   ..
       !! processed by numpydoc !!

.. py:function:: from_plane_to_grpc_plane(plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.commonmessages_pb2.Plane

   
   Convert a v1 ``Plane`` class to a plane gRPC message.


   :Parameters:

       **plane** : :obj:`Plane`
           Source plane data.



   :Returns:

       :obj:`GRPCPlane`
           Geometry service gRPC plane message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_plane_to_plane(plane: ansys.api.discovery.v1.commonmessages_pb2.Plane) -> ansys.geometry.core.math.plane.Plane

   
   Convert a v1 plane gRPC message to a ``Plane`` class.


   :Parameters:

       **plane** : :obj:`GRPCPlane`
           Source plane data.



   :Returns:

       :obj:`Plane`
           Converted plane.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_tess_to_pd(tess: ansys.api.discovery.v1.design.designmessages_pb2.Tessellation) -> pyvista.PolyData

   
   Convert a v1 ``Tessellation`` to ``pyvista.PolyData``.
















   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_tess_to_raw_data(tess: ansys.api.discovery.v1.design.designmessages_pb2.Tessellation) -> dict

   
   Convert a v1 ``Tessellation`` to raw data.
















   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_edge_tess_to_pd(tess: ansys.api.discovery.v1.design.designmessages_pb2.EdgeTessellation) -> pyvista.PolyData

   
   Convert a v1 ``EdgeTessellation`` to ``pyvista.PolyData``.
















   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_edge_tess_to_raw_data(tess: ansys.api.discovery.v1.design.designmessages_pb2.EdgeTessellation) -> dict

   
   Convert a v1 ``EdgeTessellation`` to raw data.
















   ..
       !! processed by numpydoc !!

.. py:function:: from_tess_options_to_grpc_tess_options(options: ansys.geometry.core.misc.options.TessellationOptions) -> ansys.api.discovery.v1.design.designmessages_pb2.TessellationOptions

   
   Convert a v1 ``TessellationOptions`` class to a tessellation options gRPC message.


   :Parameters:

       **options** : :obj:`TessellationOptions`
           Source tessellation options data.



   :Returns:

       :obj:`GRPCTessellationOptions`
           Geometry service gRPC tessellation options message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_fmd_options_to_grpc_fmd_options(options: ansys.geometry.core.misc.options.FMDExportOptions) -> ansys.api.discovery.v1.design.designmessages_pb2.FMDExportOptions

   
   Convert a v1 ``FMDExportOptions`` class to an FMD export options gRPC message.


   :Parameters:

       **options** : :obj:`FMDExportOptions`
           Source FMD export options.



   :Returns:

       :obj:`GRPCFMDExportOptions`
           Geometry service gRPC FMD export options message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_shapes_to_grpc_geometries(plane: ansys.geometry.core.math.plane.Plane, edges: list[ansys.geometry.core.sketch.edge.SketchEdge], faces: list[ansys.geometry.core.sketch.face.SketchFace], only_one_curve: bool = False) -> ansys.api.discovery.v1.design.designmessages_pb2.Geometries

   
   Convert lists of ``SketchEdge`` and ``SketchFace`` to a gRPC message.


   :Parameters:

       **plane** : :obj:`Plane`
           Plane for positioning the 2D sketches.

       **edges** : :class:`python:list`\[:obj:`SketchEdge`]
           Source edge data.

       **faces** : :class:`python:list`\[:obj:`SketchFace`]
           Source face data.

       **only_one_curve** : :ref:`bool <python:bltin-boolean-values>`, default: :data:`python:False`
           Whether to project one curve of the whole set of geometries to
           enhance performance.



   :Returns:

       :obj:`GRPCGeometries`
           Geometry service gRPC geometries message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_edges_to_grpc_geometries(edges: list[ansys.geometry.core.sketch.edge.SketchEdge], plane: ansys.geometry.core.math.plane.Plane) -> tuple[list[ansys.api.discovery.v1.commonmessages_pb2.Line], list[ansys.api.discovery.v1.commonmessages_pb2.Arc], list[ansys.api.discovery.v1.design.designmessages_pb2.NurbsCurve]]

   
   Convert a v1 list of ``SketchEdge`` to a gRPC message.


   :Parameters:

       **edges** : :class:`python:list`\[:obj:`SketchEdge`]
           Source edge data.

       **plane** : :obj:`Plane`
           Plane for positioning the 2D sketches.



   :Returns:

       :class:`python:tuple`\[:class:`python:list`\[:obj:`GRPCLine`], :class:`python:list`\[:obj:`GRPCArc`], :class:`python:list`\[:obj:`GRPCNurbsCurve`]]
           Geometry service gRPC line, arc, and NURBS curve messages. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_arc_to_grpc_arc(arc: ansys.geometry.core.sketch.arc.Arc, plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.commonmessages_pb2.Arc

   
   Convert a v1 ``Arc`` class to an arc gRPC message.


   :Parameters:

       **arc** : :obj:`Arc`
           Source arc data.

       **plane** : :obj:`Plane`
           Plane for positioning the arc within.



   :Returns:

       :obj:`GRPCArc`
           Geometry service gRPC arc message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_nurbs_to_grpc_nurbs_curve(curve: ansys.geometry.core.sketch.nurbs.SketchNurbs, plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.design.designmessages_pb2.NurbsCurve

   
   Convert a v1 ``SketchNurbs`` class to a NURBS curve gRPC message.


   :Parameters:

       **nurbs** : :obj:`SketchNurbs`
           Source NURBS data.

       **plane** : :obj:`Plane`
           Plane for positioning the NURBS curve.



   :Returns:

       :obj:`GRPCNurbsCurve`
           Geometry service gRPC NURBS curve message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_ellipse_to_grpc_ellipse(ellipse: ansys.geometry.core.sketch.ellipse.SketchEllipse, plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.commonmessages_pb2.Ellipse

   
   Convert a v1 ``SketchEllipse`` class to an ellipse gRPC message.


   :Parameters:

       **ellipse** : :obj:`SketchEllipse`
           Source ellipse data.



   :Returns:

       :obj:`GRPCEllipse`
           Geometry service gRPC ellipse message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_circle_to_grpc_circle(circle: ansys.geometry.core.sketch.circle.SketchCircle, plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.commonmessages_pb2.Circle

   
   Convert a v1 ``SketchCircle`` class to a circle gRPC message.


   :Parameters:

       **circle** : :obj:`SketchCircle`
           Source circle data.

       **plane** : :obj:`Plane`
           Plane for positioning the circle.



   :Returns:

       :obj:`GRPCCircle`
           Geometry service gRPC circle message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_polygon_to_grpc_polygon(polygon: ansys.geometry.core.sketch.polygon.Polygon, plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.commonmessages_pb2.Polygon

   
   Convert a v1 ``Polygon`` class to a polygon gRPC message.


   :Parameters:

       **polygon** : :obj:`Polygon`
           Source polygon data.



   :Returns:

       :obj:`GRPCPolygon`
           Geometry service gRPC polygon message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_sketch_segment_to_grpc_line(segment: ansys.geometry.core.sketch.segment.SketchSegment, plane: ansys.geometry.core.math.plane.Plane) -> ansys.api.discovery.v1.commonmessages_pb2.Line

   
   Convert a v1 ``Segment`` class to a line gRPC message.


   :Parameters:

       **segment** : :obj:`SketchSegment`
           Source segment data.



   :Returns:

       :obj:`GRPCLine`
           Geometry service gRPC line message. The unit is meters.











   ..
       !! processed by numpydoc !!

.. py:function:: from_trimmed_curve_to_grpc_trimmed_curve(curve: ansys.geometry.core.shapes.curves.trimmed_curve.TrimmedCurve) -> ansys.api.discovery.v1.design.designmessages_pb2.TrimmedCurve

   
   Convert a v1 ``TrimmedCurve`` to a trimmed curve gRPC message.


   :Parameters:

       **curve** : :obj:`TrimmedCurve`
           Curve to convert.



   :Returns:

       :obj:`GRPCTrimmedCurve`
           Geometry service gRPC ``TrimmedCurve`` message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_curve_to_grpc_curve(curve: ansys.geometry.core.shapes.curves.curve.Curve) -> ansys.api.discovery.v1.design.designmessages_pb2.CurveGeometry

   
   Convert a v1 ``Curve`` object to a curve gRPC message.


   :Parameters:

       **curve** : :obj:`Curve`
           Curve to convert.



   :Returns:

       :obj:`GRPCCurve`
           Return ``Curve`` as a ``ansys.api.geometry.CurveGeometry`` message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_nurbs_curve_to_grpc_nurbs_curve(curve: ansys.geometry.core.shapes.curves.nurbs.NURBSCurve) -> ansys.api.discovery.v1.design.designmessages_pb2.NurbsCurve

   
   Convert a v1 ``NURBSCurve`` to a NURBS curve gRPC message.


   :Parameters:

       **curve** : :obj:`NURBSCurve`
           Curve to convert.



   :Returns:

       :obj:`GRPCNurbsCurve`
           Geometry service gRPC ``NURBSCurve`` message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_nurbs_surface_to_grpc_nurbs_surface(surface: ansys.geometry.core.shapes.surfaces.nurbs.NURBSSurface) -> ansys.api.discovery.v1.design.designmessages_pb2.NurbsSurface

   
   Convert a v1 ``NURBSSurface`` to a NURBS surface gRPC message.


   :Parameters:

       **surface** : :obj:`NURBSSurface`
           Surface to convert.



   :Returns:

       :obj:`GRPCNurbsSurface`
           Geometry service gRPC ``NURBSSurface`` message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_nurbs_curve_to_nurbs_curve(curve: ansys.api.discovery.v1.design.designmessages_pb2.NurbsCurve) -> ansys.geometry.core.shapes.curves.nurbs.NURBSCurve

   
   Convert a v1 NURBS curve gRPC message to a ``NURBSCurve``.


   :Parameters:

       **curve** : :obj:`GRPCNurbsCurve`
           Geometry service gRPC NURBS curve message.



   :Returns:

       :obj:`NURBSCurve`
           Resulting converted NURBS curve.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_nurbs_surface_to_nurbs_surface(surface: ansys.api.discovery.v1.design.designmessages_pb2.NurbsSurface) -> ansys.geometry.core.shapes.surfaces.nurbs.NURBSSurface

   
   Convert a v1 NURBS surface gRPC message to a ``NURBSSurface``.


   :Parameters:

       **surface** : :obj:`GRPCNurbsSurface`
           Geometry service gRPC NURBS surface message.



   :Returns:

       :obj:`NURBSSurface`
           Resulting converted NURBS surface.











   ..
       !! processed by numpydoc !!

.. py:function:: from_knots_to_grpc_knots(knots: list[float]) -> list[ansys.api.discovery.v1.design.designmessages_pb2.Knot]

   
   Convert a v1 list of knots to a list of gRPC knot messages.


   :Parameters:

       **knots** : :class:`python:list`\[:class:`python:float`]
           Source knots data.



   :Returns:

       :class:`python:list`\[:obj:`GRPCKnot`]
           Geometry service gRPC knot messages.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_curve_to_curve(curve: ansys.api.discovery.v1.design.designmessages_pb2.CurveGeometry) -> ansys.geometry.core.shapes.curves.curve.Curve

   
   Convert a v1 curve gRPC message to a ``Curve``.


   :Parameters:

       **curve** : :obj:`GRPCCurve`
           Geometry service gRPC curve message.



   :Returns:

       :obj:`Curve`
           Resulting converted curve.











   ..
       !! processed by numpydoc !!

.. py:function:: from_trimmed_surface_to_grpc_trimmed_surface(trimmed_surface: ansys.geometry.core.shapes.surfaces.trimmed_surface.TrimmedSurface) -> ansys.api.discovery.v1.design.designmessages_pb2.TrimmedSurface

   
   Convert a v1 ``TrimmedSurface`` to a trimmed surface gRPC message.


   :Parameters:

       **trimmed_surface** : :obj:`TrimmedSurface`
           Surface to convert.



   :Returns:

       :obj:`GRPCTrimmedSurface`
           Geometry service gRPC ``TrimmedSurface`` message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_surface_to_grpc_surface(surface: ansys.geometry.core.shapes.surfaces.surface.Surface) -> tuple[ansys.api.discovery.v1.design.designmessages_pb2.Surface, ansys.api.discovery.v1.geometryenums_pb2.SurfaceType]

   
   Convert a v1 ``Surface`` object to a surface gRPC message.


   :Parameters:

       **surface** : :obj:`Surface`
           Surface to convert.



   :Returns:

       :obj:`GRPCSurface`
           Return ``Surface`` as a ``ansys.api.geometry.Surface`` message.

       :obj:`GRPCSurfaceType`
           Return the grpc surface type of ``Surface``.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_surface_to_surface(surface: ansys.api.discovery.v1.design.designmessages_pb2.Surface, surface_type: ansys.geometry.core.designer.face.SurfaceType) -> ansys.geometry.core.shapes.surfaces.surface.Surface

   
   Convert a v1 surface gRPC message to a ``Surface`` class.


   :Parameters:

       **surface** : :obj:`GRPCSurface`
           Geometry service gRPC surface message.



   :Returns:

       :obj:`Surface`
           Resulting converted surface.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_driving_dimension_to_driving_dimension(driving_dimension: ansys.api.discovery.v1.design.designmessages_pb2.DrivingDimensionEntity) -> ansys.geometry.core.parameters.parameter.Parameter

   
   Convert a v1 gRPC driving dimension to a driving dimension object.


   :Parameters:

       **driving_dimension** : :obj:`GRPCDrivingDimension`
           Source driving dimension type.



   :Returns:

       :obj:`Parameter`
           Converted driving dimension.











   ..
       !! processed by numpydoc !!

.. py:function:: from_driving_dimension_to_grpc_driving_dimension(driving_dimension: ansys.geometry.core.parameters.parameter.Parameter) -> ansys.api.discovery.v1.design.designmessages_pb2.DrivingDimensionEntity

   
   Convert a v1 driving dimension object to a gRPC driving dimension.


   :Parameters:

       **driving_dimension** : :obj:`Parameter`
           Source driving dimension type.



   :Returns:

       :obj:`GRPCDrivingDimension`
           Converted driving dimension.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_update_status_to_parameter_update_status(update_status: ansys.api.discovery.v1.design.parameters.drivingdimension_pb2.UpdateStatus) -> ansys.geometry.core.parameters.parameter.ParameterUpdateStatus

   
   Convert a v1 gRPC update status to a parameter update status.


   :Parameters:

       **update_status** : :obj:`GRPCUpdateStatus`
           Source update status.



   :Returns:

       :obj:`ParameterUpdateStatus`
           Converted update status.











   ..
       !! processed by numpydoc !!

.. py:function:: from_design_file_format_to_grpc_file_export_format(design_file_format: ansys.geometry.core.designer.design.DesignFileFormat) -> ansys.api.discovery.v1.commonenums_pb2.FileFormat

   
   Convert from a DesignFileFormat object to a gRPC FileExportFormat one.


   :Parameters:

       **design_file_format** : :obj:`DesignFileFormat`
           The file format desired



   :Returns:

       :obj:`GRPCFileExportFormat`
           Converted gRPC File format











   ..
       !! processed by numpydoc !!

.. py:function:: from_material_to_grpc_material(material: ansys.geometry.core.materials.material.Material) -> ansys.api.discovery.v1.design.designmessages_pb2.MaterialEntity

   
   Convert a v1 ``Material`` class to a material gRPC message.


   :Parameters:

       **material** : :obj:`Material`
           Source material data.



   :Returns:

       :obj:`GRPCMaterial`
           Geometry service gRPC material message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_matrix_to_matrix(matrix: ansys.api.discovery.v1.design.designmessages_pb2.Matrix) -> ansys.geometry.core.math.matrix.Matrix44

   
   Convert a v1 gRPC matrix to a matrix.


   :Parameters:

       **matrix** : :obj:`GRPCMatrix`
           Source gRPC matrix data.



   :Returns:

       :obj:`Matrix44`
           Converted matrix.











   ..
       !! processed by numpydoc !!

.. py:function:: from_matrix_to_grpc_matrix(matrix: ansys.geometry.core.math.matrix.Matrix44) -> ansys.api.discovery.v1.design.designmessages_pb2.Matrix

   
   Convert a ``Matrix44`` to a v1 gRPC matrix.


   :Parameters:

       **matrix** : :obj:`Matrix44`
           Source matrix data.



   :Returns:

       :obj:`GRPCMatrix`
           Converted gRPC matrix.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_direction_to_unit_vector(direction: ansys.api.discovery.v1.commonmessages_pb2.Direction) -> ansys.geometry.core.math.vector.UnitVector3D

   
   Convert a v1 gRPC direction to a unit vector.


   :Parameters:

       **direction** : :obj:`GRPCDirection`
           Source gRPC direction data.



   :Returns:

       :obj:`UnitVector3D`
           Converted unit vector.











   ..
       !! processed by numpydoc !!

.. py:function:: from_length_to_grpc_quantity(input: ansys.geometry.core.misc.measurements.Distance) -> ansys.api.discovery.v1.commonmessages_pb2.Quantity

   
   Convert a v1 ``Distance`` containing a length to a gRPC quantity.


   :Parameters:

       **input** : :obj:`Distance`
           Source measurement data.



   :Returns:

       :obj:`GRPCQuantity`
           Converted gRPC quantity.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_quantity_to_distance(input: ansys.api.discovery.v1.commonmessages_pb2.Quantity) -> ansys.geometry.core.misc.measurements.Distance

   
   Convert a v1 gRPC quantity to ``Distance`` containing a length.


   :Parameters:

       **input** : :obj:`GRPCQuantity`
           Source measurement data.



   :Returns:

       :obj:`Distance`
           Converted Distance quantity.











   ..
       !! processed by numpydoc !!

.. py:function:: from_angle_to_grpc_quantity(input: ansys.geometry.core.misc.measurements.Measurement) -> ansys.api.discovery.v1.commonmessages_pb2.Quantity

   
   Convert a v1 ``Measurement`` containing an angle to a gRPC quantity.


   :Parameters:

       **input** : :obj:`Measurement`
           Source measurement data.



   :Returns:

       :obj:`GRPCQuantity`
           Converted gRPC quantity.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_angle_to_angle(grpc_quantity: ansys.api.discovery.v1.commonmessages_pb2.Quantity) -> pint.Quantity

   
   Convert a v1 gRPC quantity representing an angle to a pint Quantity.


   :Parameters:

       **grpc_quantity** : :obj:`GRPCQuantity`
           Source gRPC quantity data.



   :Returns:

       :obj:`Measurement`
           Converted angle quantity with server angle units.











   ..
       !! processed by numpydoc !!

.. py:function:: from_area_to_grpc_quantity(input: ansys.geometry.core.misc.measurements.Measurement) -> ansys.api.discovery.v1.commonmessages_pb2.Quantity

   
   Convert a v1 ``Measurement`` containing an area to a gRPC quantity.


   :Parameters:

       **input** : :obj:`Measurement`
           Source measurement data.



   :Returns:

       :obj:`GRPCQuantity`
           Converted gRPC quantity.











   ..
       !! processed by numpydoc !!

.. py:function:: from_volume_to_grpc_quantity(input: ansys.geometry.core.misc.measurements.Measurement) -> ansys.api.discovery.v1.commonmessages_pb2.Quantity

   
   Convert a v1 ``Measurement`` containing a volume to a gRPC quantity.


   :Parameters:

       **input** : :obj:`Measurement`
           Source measurement data.



   :Returns:

       :obj:`GRPCQuantity`
           Converted gRPC quantity.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_volume_to_volume(grpc_quantity: ansys.api.discovery.v1.commonmessages_pb2.Quantity) -> pint.Quantity

   
   Convert a v1 gRPC quantity representing volume to a pint Quantity.


   :Parameters:

       **grpc_quantity** : :obj:`GRPCQuantity`
           Source gRPC quantity data.



   :Returns:

       :obj:`pint.Quantity`
           Converted volume quantity with server volume units.











   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_quantity_to_float(grpc_quantity: ansys.api.discovery.v1.commonmessages_pb2.Quantity) -> float

   
   Convert a v1 gRPC quantity to a float.


   :Parameters:

       **grpc_quantity** : :obj:`GRPCQuantity`
           Source gRPC quantity data.



   :Returns:

       :class:`python:float`
           The float value contained in the quantity.











   ..
       !! processed by numpydoc !!

.. py:function:: from_float_to_grpc_quantity(value: float) -> ansys.api.discovery.v1.commonmessages_pb2.Quantity

   
   Convert a float to a gRPC quantity.


   :Parameters:

       **value** : :class:`python:float`
           The float value to convert.



   :Returns:

       :obj:`GRPCQuantity`
           Converted gRPC quantity containing the float value.











   ..
       !! processed by numpydoc !!

.. py:function:: from_parameter_to_grpc_quantity(value: float) -> ansys.api.discovery.v1.commonmessages_pb2.Quantity

   
   Convert a v1 dimensionless parameter to a gRPC quantity.


   :Parameters:

       **value** : :class:`python:float`
           Dimensionless parameter value (e.g., u/v surface parameters).



   :Returns:

       :obj:`GRPCQuantity`
           Converted gRPC quantity with the dimensionless value.











   ..
       !! processed by numpydoc !!

.. py:function:: from_import_options_definitions_to_grpc_import_options_definition(import_options_definitions: ansys.geometry.core.misc.options.ImportOptionsDefinitions) -> ansys.api.discovery.v1.commands.file_pb2.ImportOptionDefinition

   
   Convert a v1 ``ImportOptionsDefinitions`` to import options definition gRPC message.


   :Parameters:

       **import_options_definitions** : :obj:`ImportOptionsDefinitions`
           Definition of the import options.



   :Returns:

       :obj:`GRPCImportOptionDefinition`
           Geometry service gRPC import options definition message.











   ..
       !! processed by numpydoc !!

.. py:function:: from_enclosure_options_to_grpc_enclosure_options(enclosure_options: ansys.geometry.core.tools.prepare_tools.EnclosureOptions) -> ansys.api.discovery.v1.operations.prepare_pb2.EnclosureOptions

   
   Convert enclosure_options to grpc definition.


   :Parameters:

       **enclosure_options** : :obj:`EnclosureOptions`
           Definition of the enclosure options.



   :Returns:

       :obj:`GRPCEnclosureOptions`
           Grpc converted definition.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_body(body: ansys.api.discovery.v1.design.designmessages_pb2.BodyEntity) -> dict

   
   Serialize a GRPCBodyEntity object into a dictionary.

   It is not directly converted to a pygeometry object because we'll assign it in place and
   construct the object while updating the design object by the tracker output.

   :Parameters:

       **body** : :obj:`GRPCBodyEntity`
           The gRPC BodyEntity object to serialize.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the BodyEntity object without gRPC dependencies.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_component(component: ansys.api.discovery.v1.design.designmessages_pb2.ComponentEntity) -> dict

   
   Serialize a GRPCComponentEntity object into a dictionary.


   :Parameters:

       **component** : :obj:`GRPCComponentEntity`
           The gRPC ComponentEntity object to serialize.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the ComponentEntity object without gRPC dependencies.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_part(part: ansys.api.discovery.v1.design.designmessages_pb2.PartEntity) -> dict

   
   Serialize a GRPCPartEntity object into a dictionary.


   :Parameters:

       **part** : :obj:`GRPCPartEntity`
           The gRPC PartEntity object to serialize.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the PartEntity object without gRPC dependencies.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_entity_identifier(entity: ansys.api.discovery.v1.commonmessages_pb2.EntityIdentifier) -> dict

   
   Serialize an EntityIdentifier object into a dictionary.


   :Parameters:

       **entity** : :obj:`EntityIdentifier`
           The gRPC EntityIdentifier object to serialize.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the EntityIdentifier object without gRPC dependencies.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_tracked_changes(tracked_changes: ansys.api.discovery.v1.design.designmessages_pb2.TrackedChanges) -> dict

   
   Serialize a TrackedChanges object into a dictionary.


   :Parameters:

       **response** : :obj:`GRPCTrackedChanges`
           The gRPC TrackedChanges object to serialize.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the TrackedChanges object.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_tracked_command_response(response: ansys.api.discovery.v1.design.designmessages_pb2.TrackedCommandResponse) -> dict

   
   Serialize a TrackedCommandResponse object into a dictionary.


   :Parameters:

       **response** : :obj:`GRPCTrackedCommandResponse`
           The gRPC TrackedCommandResponse object to serialize.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the TrackedCommandResponse object.











   ..
       !! processed by numpydoc !!

.. py:function:: serialize_repair_command_response(response: ansys.api.discovery.v1.operations.repair_pb2.RepairToolMessage) -> dict

   
   Serialize a RepairToolResponse object into a dictionary.


   :Parameters:

       **response** : :obj:`GRPCRepairToolResponse`
           The gRPC RepairToolResponse object to serialize.
           A dictionary representation of the RepairToolResponse object.














   ..
       !! processed by numpydoc !!

.. py:function:: response_problem_area_for_body(response) -> dict

   
   Get a dictionary response from problem areas for a body.


   :Parameters:

       **response**
           The response to convert.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the ProblemAreaForBody object.











   ..
       !! processed by numpydoc !!

.. py:function:: response_problem_area_for_face(response) -> dict

   
   Get a dictionary response from problem areas for a face.


   :Parameters:

       **response**
           The response to convert.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the ProblemAreaForFace object.











   ..
       !! processed by numpydoc !!

.. py:function:: response_problem_area_for_edge(response) -> dict

   
   Get a dictionary response from problem areas for an edge.


   :Parameters:

       **response**
           The response to convert.



   :Returns:

       :class:`python:dict`
           A dictionary representation of the ProblemAreaForEdge object.











   ..
       !! processed by numpydoc !!

.. py:function:: from_face_loop_to_grpc_loop(loop: ansys.geometry.core.designer.face.FaceLoop) -> ansys.api.discovery.v1.design.designmessages_pb2.Loop

   
   Convert a ``FaceLoop`` to a gRPC ``Loop`` message.


   :Parameters:

       **loop** : :obj:`FaceLoop`
           The face loop to convert.



   :Returns:

       :obj:`GRPCLoop`
           The gRPC Loop message.











   ..
       !! processed by numpydoc !!

.. py:function:: to_grpc_any(value) -> google.protobuf.any_pb2.Any

   
   Pack an arbitrary Python value into a ``google.protobuf.Any`` message.

   The following conversions are applied automatically:

   - ``Body``, ``Face``, ``Edge`` — packed as ``EntityIdentifier``.
   - ``Point3D`` — packed as ``Point``.
   - ``UnitVector3D`` — packed as ``Direction``.
   - ``Frame`` — packed as ``Frame``.
   - ``Plane`` — packed as ``Plane``.
   - ``Line`` — packed as ``Line``.
   - ``NURBSCurve`` — packed as ``NurbsCurve``.
   - ``NURBSSurface`` — packed as ``NurbsSurface``.
   - ``TrimmedCurve`` — packed as ``TrimmedCurve``.
   - ``Curve`` — packed as ``CurveGeometry``.
   - ``Matrix44`` — packed as ``Matrix``.
   - ``Distance`` — packed as ``Quantity``.
   - ``bool``, ``int``, ``float``, ``str`` — wrapped in the matching
     protobuf well-known wrapper type.
   - An already-packed ``google.protobuf.Any`` — returned unchanged.

   :Parameters:

       **value** : :obj:`object`
           The Python value to convert.



   :Returns:

       :obj:`google.protobuf.any_pb2.Any`
           The packed ``Any`` message.




   :Raises:

       :obj:`TypeError`
           If ``value`` is not a supported type.







   ..
       !! processed by numpydoc !!

.. py:function:: from_grpc_any(any_msg: google.protobuf.any_pb2.Any)

   
   Unpack a ``google.protobuf.Any`` message to a native PyAnsys Geometry type.

   The following conversions are applied automatically based on the packed
   type URL:

   - ``EntityIdentifier`` — returned as a ``str`` (the entity ID).
   - ``Point`` — converted via :func:`from_grpc_point_to_point3d`.
   - ``Direction`` — converted via :func:`from_grpc_direction_to_unit_vector`.
   - ``Frame`` — converted via :func:`from_grpc_frame_to_frame`.
   - ``Plane`` — converted via :func:`from_grpc_plane_to_plane`.
   - ``CurveGeometry`` — converted via :func:`from_grpc_curve_to_curve`.
   - ``NurbsCurve`` — converted via
     :func:`from_grpc_nurbs_curve_to_nurbs_curve`.
   - ``NurbsSurface`` — converted via
     :func:`from_grpc_nurbs_surface_to_nurbs_surface`.
   - ``Matrix`` — converted via :func:`from_grpc_matrix_to_matrix`.
   - ``Quantity`` — converted via :func:`from_grpc_quantity_to_distance`.
   - ``BoolValue``, ``Int64Value``, ``FloatValue``, ``StringValue`` —
     unwrapped to the corresponding Python primitive.

   :Parameters:

       **any_msg** : :obj:`google.protobuf.any_pb2.Any`
           The packed ``Any`` message to convert.



   :Returns:

       :obj:`object`
           The resulting native Python / PyAnsys Geometry object.




   :Raises:

       :obj:`TypeError`
           If ``any_msg`` is not a ``google.protobuf.Any`` instance or the
           packed type is not supported.







   ..
       !! processed by numpydoc !!



